<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">javas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--landing page-->
    <string name="landing_page_title"><b>JaVas</b></string>
    <string name="Landing_page_text">Mari Vaksinasi Bersama Kami</string>


    <!--Login page-->
    <string name="login_page_title">Login</string>
    <string name="login_admin_page_title">Login Admin</string>
    <string name="login_email_input">Email</string>
    <string name="login_password_input">Password</string>


    <!--register page-->
    <string name="register_page_title">Register</string>
    <string name="register_page_title_number">1 of 3</string>
    <string name="register_page_title_number_two">2 of 3</string>
    <string name="register_page_title_number_three">3 of 3</string>
    <string name="register_email_input">Email</string>
    <string name="register_password_input">Password</string>
    <string name="register_nik_input">NIK</string>
    <string name="register_name_input">Nama</string>
    <string name="register_dob_input">Tanggal Lahir</string>
    <string name="register_dob_input_day">Tanggal</string>
    <string name="register_dob_input_month">Bulan</string>
    <string name="register_dob_input_year">Tahun</string>
    <string name="register_birth_place_input">Tempat Lahir</string>
    <string name="register_phone_input">No.Handphone</string>
    <string name="register_alamat_input">Tempat Tinggal</string>
    <string name="register_gender_input">Jenis Kelamin (pria atau wanita)</string>


    <!--Home Page-->
    <string name="home_page_title">Selamat Datang,</string>
    <string name="home_page_user_title"><b>Nama</b></string>


    <!--User profile-->
    <string name="user_profile_txt">User Profile</string>
    <string name="user_nik_txt">NIK: </string>
    <string name="user_name_txt">Nama: </string>
    <string name="user_gender_txt">Jenis Kelamin: </string>
    <string name="user_dob_txt">Tanggal Lahir: </string>
    <string name="user_birthplace_txt">Tempat Lahir: </string>
    <string name="user_alamat_txt">Alamat: </string>
    <string name="user_phone_txt">No Handphone: </string>
    <string name="user_profile_current_password_input">Password lama</string>
    <string name="user_profile_new_password_input">Password baru</string>


    <!--Button -->
    <string name="login_btn_txt">Log In</string>
    <string name="register_btn_txt">Daftar</string>
    <string name="login_admin_btn_txt"><u>Admin Login Klik Disini</u></string>
    <string name="register_btn_txt_borderless">Ingin membuat akun</string>
    <string name="register_continue_btn_txt">Lanjutkan</string>
    <string name="register_back_btn_txt">Kembali</string>
    <string name="register_register_btn_txt">Registrasi</string>
    <string name="home_page_vaksinasi_btn_txt">Mendaftar Vaksinasi</string>
    <string name="home_page_jadwal_btn_txt">Melihat Jadwal Vaksinasi</string>
    <string name="admin_page_vaksinasi_btn_txt">Membuka Daftar Vaksinasi</string>
    <string name="admin_page_jadwal_btn_txt">Melihat Daftar Vaksinasi</string>
    <string name="home_page_profile_btn_txt">Profil Pengguna</string>
    <string name="user_profile_change_btn_txt">Ganti</string>
    <string name="user_profile_signout_btn_txt">Keluar Dari Akun</string>

    <!--    Sympton Fragment-->
    <string name="_1_4" tools:ignore="TypographyFractions">1/4</string>
    <string name="_2_4">2/4</string>
    <string name="_3_4" tools:ignore="TypographyFractions">3/4</string>
    <string name="_4_4">4/4</string>
    <string name="check_result">CHECK RESULT</string>
    <string name="next">NEXT</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="breathing_problem">Sakit pernapasan</string>
    <string name="fever">Demam</string>
    <string name="dry_cough">Batuk kering</string>
    <string name="sore_throat">Sakit Tenggorokan</string>
    <string name="symptoms_checker">Symptoms Checker</string>
    <string name="_24">2/4</string>
    <string name="sedang_flu">Sedang flu</string>
    <string name="asma">Asma</string>
    <string name="penyakit_paru_obstruktif_kronis">Penyakit paru obstruktif kronis</string>
    <string name="sakit_kepala">Sakit kepala</string>
    <string name="sakit_jantung">Sakit jantung</string>
    <string name="hiper_tensi">Hiper tensi</string>
    <string name="kecapean">Kecapean</string>
    <string name="gangguan_sistem_pencernaan">Gangguan sistem pencernaan</string>
    <string name="baru_bepergian_dari_luar_kota_negeri">Baru bepergian dari luar kota/negeri</string>
    <string name="bertemu_pasien_covid">Bertemu pasien covid</string>
    <string name="bertemu_orang_dalam_jumlah_banyak">Bertemu orang dalam jumlah banyak</string>
    <string name="anggota_keluarga_bekerja_di_tempat_umum">Anggota keluarga bekerja di tempat umum</string>
    <string name="memakai_masker">Memakai masker</string>
    <string name="menggunakan_hand_sanitizer">Menggunakan hand sanitizer</string>
    <string name="megikuti_acara_besar">Megikuti acara besar</string>


    <!--Date page-->
    <string name="Date_page_title">Jadwal Vaksin Anda</string>
    <string name="Date_page_date_time">31–12–2222</string>
    <string name="Date_page_hospital">RS.CONTOH BLABLABLAASSADASD</string>


    <!--positive covid-19 page-->
    <string name="positive_covid_text">Anda memiliki indikasi covid-19!</string>
    <string name="positive_covid_text_and">Silakan periksa ke fasilitas kesehatan terdekat, dan tetap patuhi protokol kesehatan!</string>

    <string name="negative_covid_text">Anda tidak ada indikasi covid-19!</string>
    <string name="negative_covid_text_and">Silakan melanjutkan ke pendaftaran</string>
    <string name="btn_negative">Lanjutkan</string>


    <!--dashboard admin-->
    <string name="dashboard_page_title">Rumah Sakit</string>
    <string name="dashboard_page_name">Hospital</string>


    <!--hospital vaksinasi-->
    <string name="vaccinate_title">Pilih tanggal Vaksinasi </string>
    <string name="vaccinate_date_title">Tanggal Vaksinasi </string>
    <string name="vaccinate_person_title">Jumlah maksimal</string>
    <string name="vaccinate_person_input">orang</string>
    <string name="vaccinate_person_btn">Update</string>


    <!--choose date-->
    <string name="date_page_title">Pilih jadwal</string>
    <string name="date_page_btn">Pilih</string>


    <!--vaccine date-->
    <string name="daftar_vaksin"><b>Daftar Vaskin</b></string>
    <string name="daftar_tgl">Pilih Tanggal</string>
    <string name="pilih_hospital">Pilih Rumah Sakit</string>

    <!--    admin list dat-->
    <string name="list_date_title">Check tanggal vaksin</string>
    <string name="list_date_max_people_title">Maksimal pendaftaran : </string>
    <string name="list_date_registered_people">Jumlah orang terdaftar</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="batal_vaksinasi">Batal Vaksinasi</string>


</resources>