<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userprofile.UserProfileFragment"
    android:padding="25dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_txt"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_NIK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_nik_txt"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"  />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_txt"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_NIK" />
    <TextView
        android:id="@+id/user_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_gender_txt"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />
    <TextView
        android:id="@+id/user_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_dob_txt"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_gender" />
    
    <TextView
        android:id="@+id/user_birthplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_birthplace_txt"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dob" />
    
    <TextView
        android:id="@+id/user_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_alamat_txt"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />
    

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_phone_txt"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_birthplace"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue_login_page"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_blue_primary"
        android:text="@string/user_profile_change_btn_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back_register_page"
        app:layout_constraintTop_toBottomOf="@id/user_alamat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_register_page"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/background_button_grey_primary"
        android:scaleType="fitXY"
        android:text="@string/register_back_btn_txt"
        android:textColor="#B9B9B9"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue_login_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_continue_login_page" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout_register_page"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_red_primary"
        android:scaleType="fitXY"
        android:text="@string/user_profile_signout_btn_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue_login_page" />




</androidx.constraintlayout.widget.ConstraintLayout>