<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.hospitalvaksinasi.HospitalVaksinasiFragment"
    android:padding="25dp">

    <TextView
        android:id="@+id/home_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vaccinate_title"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dob_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/home_page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/vaccinate_date_title"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_dob_edtxt_day"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_title">

        <EditText
            android:id="@+id/dob_edtxt_day"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_dob_input_day"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_dob_edtxt_month"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/layout_dob_edtxt_day"
        app:layout_constraintTop_toBottomOf="@id/dob_title">

        <EditText
            android:id="@+id/dob_edtxt_month"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_dob_input_month"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_dob_edtxt_year"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/layout_dob_edtxt_month"
        app:layout_constraintTop_toBottomOf="@id/dob_title">

        <EditText
            android:id="@+id/dob_edtxt_year"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_dob_input_year"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/person_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/layout_dob_edtxt_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/vaccinate_person_title"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_person_edtxt_max"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_title">

        <EditText
            android:id="@+id/person_edtxt_max"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/vaccinate_person_input"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_vaccinate_date_page"
        android:layout_width="264dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_blue_primary"
        android:text="@string/vaccinate_person_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_person_edtxt_max" />



</androidx.constraintlayout.widget.ConstraintLayout>