<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.register.RegisterTwoFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_page_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@id/register_title_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/register_title_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register_page_title_number_two"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nik_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title">

        <EditText
            android:id="@+id/nik_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_nik_input"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_nik_edtxt">

        <EditText
            android:id="@+id/name_edtxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_name_input"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_dob_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_name_edtxt">

        <EditText
            android:id="@+id/dob_edtxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_dob_input"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_birth_place_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_dob_edtxt">

        <EditText
            android:id="@+id/birth_place_edtxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_birth_place_input"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue_login_page"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/background_button_blue_primary"
        android:text="@string/register_continue_btn_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back_register_page"
        app:layout_constraintTop_toBottomOf="@id/layout_birth_place_edtxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_register_page"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/background_button_grey_primary"
        android:scaleType="fitXY"
        android:text="@string/register_back_btn_txt"
        android:textColor="#B9B9B9"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue_login_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_continue_login_page" />

</androidx.constraintlayout.widget.ConstraintLayout>